infrastructure/gatewayapi/gateway-routes/hermes-webhook.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-webhook
  namespace: customer1
spec:
  parentRefs:
  - name: external-http-gateway
    sectionName: https
  hostnames:
  - "ws.siriusdevops.com"
  rules:
  - backendRefs:
    - name: hermes-tele-webhook 
      port: 8645 
  - matches:
      - path:
          type: PathPrefix
          value: /telegram/webhook
