infrastructure/gatewayapi/gateway-routes/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paaas-landing
  namespace: customer1
spec:
  parentRefs:
  - name: external-http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /paaas
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: paaas-landing-svc
      port: 80
